--- a/css/contentmanager.css
+++ b/css/contentmanager.css
@@ -1040,3 +1040,99 @@ table.dataTable tbody td {
 .toast__btn:hover {
   opacity: 0.8;
 }
+.egmb-10{margin-bottom: 10px;}
+        .egmb-20{margin-bottom: 20px;}
+        .radio input{visibility: unset;}
+        .egradio-inline{display: inline;}
+        .egcolor{color:red;}
+        .row{margin-left: 0px;}
+
+         .previewDivselectedImage{
+            border: solid lightgray 1px;
+            height: auto;
+            width: auto;
+        }
+         .eg-optional{
+        
+        background: linear-gradient(to right, #1f9bd9, #99d2f2 200%);
+        border: 2px solid #53b2e4;
+/*        cursor: not-allowed;*/
+    }
+    .sweet-alert p{color:#333 !important;}
+    .eg-requried{
+        
+        background: linear-gradient(to right, #b2b2b2, #c3c2c2 200%);
+        border: 2px solid #b6b6b6;
+/*        cursor: not-allowed;*/
+    }
+    .eg-optional-type-2{
+        
+        background: linear-gradient(to right, #ff9800, #ef8d22 200%);
+        border: 2px solid #ff9800;
+/*        cursor: move;*/
+    }
+    .eg-boxed{
+        
+        height: 210px;
+        margin-bottom: 20px;
+        padding: 20px;
+        color:#fff;
+        
+        
+        padding: 20px;
+        border-radius: 50px 20px;
+        box-shadow: 0 8px 8px -4px #ccc;
+    }
+
+    .eg-editlink{
+        
+        
+        text-decoration: underline !important;
+        
+    }
+    .eg-editlink a{color:#fff !important;}
+
+    .eg-boxed-2{
+
+
+        height: 130px;
+        margin-bottom: 20px;
+        padding: 20px;
+        color: #333;
+        padding: 20px;
+        border-radius: 50px 20px;
+        box-shadow: 0 8px 8px -4px #ccc;
+    }
+
+    .eg-boxed-3{
+        
+        height: 117px;
+        margin-bottom: 20px;
+        padding: 20px;
+        color:#fff;
+        
+        
+        padding: 20px;
+        border-radius: 50px 20px;
+        box-shadow: 0 8px 8px -4px #ccc;
+    }
+
+
+    .eg-optional-2{
+
+        background: linear-gradient(to right, #f5f5f5, #f5f5f5 200%);
+        border: 2px solid #f5f5f5;
+
+    }
+
+    .eg-editlink-2{
+        
+        
+        text-decoration: underline !important;
+        
+    }
+    .eg-editlink-2 a{color:rgb(0, 0, 0) !important;}
+    .hidecursor{cursor: auto !important;}
+    
+
+    
